added favicon and minor clean up :paw_prints::sparkles::wrench:

--- a/styles/sass/_body.scss
+++ b/styles/sass/_body.scss
@@ -143,18 +143,9 @@ fieldset {
 
 // Footer 
 
-footer {
+footer p {
     background-color: $primaryColor;
-
-    .footerContainer {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-
-        p {
-            text-align: center;
-            padding: 20px 100px 20px 0;
-        }
-    }
+    text-align: center;
+    padding: 20px 0;
 }
 
